--Profile-Manager-Added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!-- Dynamic Components -->
+<app-dark-light-mode></app-dark-light-mode>
 <app-basic-syntax></app-basic-syntax>
 <app-other-syntax></app-other-syntax>
 <app-template-form></app-template-form>
