--- a/src/app/other-syntax/other-syntax.component.html
+++ b/src/app/other-syntax/other-syntax.component.html
@@ -1,7 +1,7 @@
 <p>other-syntax works!</p>
 
 <!-- Conditional Loading -->
-<button (click)="toggle()">{{ text }}</button>
+<button class="btn btn-dark" (click)="toggle()">{{ text }}</button>
 <div *ngIf="show">Sample Content</div>
 
 <ul>
