--- a/src/app/form-control/form-control.component.html
+++ b/src/app/form-control/form-control.component.html
@@ -12,7 +12,9 @@
     <input type="text" name="lastName" [(ngModel)]="lastName" />
   </div>
 
-  <button (click)="save()">Save</button>
+  <button class="btn btn-dark" (click)="save()">Save</button>
   <!-- <button (click)="saveForm(profileForm)">SaveForm</button> -->
-  <button (click)="saveFormAngular(profileForm)">SaveForm</button>
+  <button class="btn btn-dark" (click)="saveFormAngular(profileForm)">
+    SaveForm
+  </button>
 </form>
