--product-list-created
Signed-off-by: Amirhossein Maleki <maleki.ah.official@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,18 @@
-<!-- Dynamic Components -->
-<app-dark-light-mode></app-dark-light-mode>
-<app-basic-syntax></app-basic-syntax>
-<app-other-syntax></app-other-syntax>
-<app-template-form></app-template-form>
-<app-template-controller-form></app-template-controller-form>
-<app-form-control></app-form-control>
-<app-form-control-advanced></app-form-control-advanced>
-<app-form-control-validation></app-form-control-validation>
-<app-profile-manager></app-profile-manager>
+<!--#region Basic Project -->
+<!-- ! Dynamic Components For Basic Project -->
+<!-- * <app-dark-light-mode></app-dark-light-mode>
+* <app-basic-syntax></app-basic-syntax>
+* <app-other-syntax></app-other-syntax>
+* <app-template-form></app-template-form>
+* <app-template-controller-form></app-template-controller-form>
+* <app-form-control></app-form-control>
+* <app-form-control-advanced></app-form-control-advanced>
+* <app-form-control-validation></app-form-control-validation>
+* <app-profile-manager></app-profile-manager> -->
+<!--#endregion-->
+
+<!-- ? Angular App Project -->
+<app-header></app-header>
+<!-- ? Component Container -->
+<router-outlet></router-outlet>
+<app-footer></app-footer>
